test/files/pos/t2726/SQLBuilder_1.scala
class SQLBuilder extends SQLBuilder.Segment

object SQLBuilder { 
  trait Segment 
}


