test/files/neg/raw-types-stubs/S_3.scala
class Sub extends Raw_2 { }
